<resources>
    <string name="app_name">TestSuitmediaMobdev</string>
    <string name="event_name">event name</string>
    <string name="event_date">event date</string>
    <string name="guest_name">guest name</string>
    <string name="nama">Nama : </string>
    <string name="pilih_event">Pilih Event</string>
    <string name="pilih_guest">Pilih Guest</string>
    <string name="masukan_nama_anda">Masukan Nama Anda</string>
    <string name="next">next</string>
    <string name="selamat_datang">Selamat Datang!</string>
    <string name="sertakan_gambar_profil_anda_untk_melengkapi_profil">Sertakan gambar profil Anda\n untuk melengkapi profil</string>
    <string name="selesai">Selesai</string>
    <string name="message_from_codi">MESSAGE FROM CODI</string>
    <string name="deskrispri">Deskrispri</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</string>
    <string name="guest">Guest</string>
</resources>